src/yini_test/cases/golden/strict/valid/disable-line/disable-line-section.strict.yini
@yini strict

--^ Disabled
^ Application
name = "enabled"

/END

