src/yini_test/cases/golden/strict/invalid/comments/block-comment-nested.strict.yini
@yini strict

^ Application
name = "strict-block-comment-nested"
/* outer /* inner */ still-outer */

/END
